--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ravikiranpathade.bakingapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -17,7 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".RecipeDetailSteps"
+            android:label="@string/title_activity_recipe_detail_steps"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".RecipeStepsActivity"></activity>
     </application>
 
 </manifest>
